<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Main Page</string>
    <string name="title_section2">Top rated</string>
    <string name="title_section3">Last added</string>
    <string name="przepis_dnia">Recipe of the day</string>
    <string name="title_activity_najwyzej_oceniane">Top rated</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ostatnio_dodane">Last added</string>
    <string name="title_activity_przepis">My Recipes</string>
    <string name="title_activity_dodaj_przepis">Add recpie</string>
    <string name="dodaj_tytul">Add tittle</string>
    <string name="dodaj_skladnik">Add ingredients</string>
    <string name="dotknij_aby_edytowac">Tap to edit</string>
    <string name="tytul">Title:</string>
    <string name="skladniki">Ingredients:</string>
    <string name="widoczny_dla_wszystkich">Public:</string>
    <string name="tak">Yes</string>
    <string name="nie">No</string>
    <string name="kategoria">Category</string>
    <string name="trudnosc">Difficulty</string>
    <string name="czas">Time</string>
    <string name="dodatkowe_dane">Additional:</string>
    <string name="krok">Step</string>
    <string name="nastepny_krok">Add element</string>
    <string name="opis">Description:</string>
    <string name="wyslij_przepis">Submit recipe</string>
    <string name="title_activity_wyswietl_przepis">My Recipe</string>
    <string name="nieokreslony">Unspecified</string>
    <string name="sredni">Average</string>
    <string name="ocen_przepis">Rate recipe</string>
    <string name="twoja_ocena">Your rate</string>
    <string name="szukaj_przepis">Search recipe</string>
    <string name="szukaj">Search</string>
    <string name="StworzKonto">Create account</string>
    <string name="TextViewLogin">Login:  (max: 12)</string>
    <string name="TextViewPassword">Password:</string>
    <string name="Mail">Mail:</string>
    <string name="powtorzHaslo">Repeat password:</string>
    <string name="zgodnoscHasel"></string>
    <string name="haslaOK">Password OK</string>
    <string name="haslaZLE">Passwords do not match</string>
    <string name="wyczysc">Clear</string>
    <string name="pseudonim">Nickname: (max: 20)</string>
    <string name="StworzButton">Create</string>
    <string name="zaloguj">Login</string>
    <string name="url_multi_complete">http://softpartner.pl/MojePrzepisy/EN/multi_complete.php</string>
    <string name="url_dodaj_przepis">http://softpartner.pl/MojePrzepisy/EN/dodaj_przepis.php</string>
    <string name="url_wszystkie_przepisy">http://softpartner.pl/MojePrzepisy/EN/wszystkie_przepisy.php</string>
    <string name="url_user_przepisy">http://softpartner.pl/MojePrzepisy/EN/user_przepisy.php</string>
    <string name="url_losowy_przepis">http://softpartner.pl/MojePrzepisy/EN/losowy_przepis.php</string>
    <string name="url_najwyzej_oceniane">http://softpartner.pl/MojePrzepisy/EN/najwyzej_oceniane.php</string>
    <string name="url_ostatnio_dodane">http://softpartner.pl/MojePrzepisy/EN/ostatnio_dodane.php</string>
    <string name="url_przepis">http://softpartner.pl/MojePrzepisy/EN/przepis.php</string>
    <string name="url_usun_przepis">http://softpartner.pl/MojePrzepisy/EN/usun_przepis.php</string>
    <string name="url_ocen">http://softpartner.pl/MojePrzepisy/EN/ocen.php</string>
    <string name="url_rejestracja">http://softpartner.pl/MojePrzepisy/EN/rejestracja.php</string>
    <string name="url_logowanie">http://softpartner.pl/MojePrzepisy/EN/logowanie.php</string>
    <string name="url_aktywuj_konto">http://softpartner.pl/MojePrzepisy/EN/aktywuj_konto.php</string>
    <string name="url_szukaj_przepis">http://softpartner.pl/MojePrzepisy/EN/szukaj_przepis.php</string>
    <string name="url_ulubione">http://softpartner.pl/MojePrzepisy/EN/ulubione.php</string>
    <string name="url_pobierzUlubione">http://softpartner.pl/MojePrzepisy/EN/pobierzUlubione.php</string>
    <string name="url_pobierz_przepis">http://softpartner.pl/MojePrzepisy/EN/pobierzPrzepis.php</string>
    <string name="url_ile_przepisow">http://softpartner.pl/MojePrzepisy/EN/ile_przepisow.php</string>
    <string name="url_czyUlubiony">http://softpartner.pl/MojePrzepisy/EN/czyUlubiony.php</string>
    <string name="url_wyslij_zdjecie">http://softpartner.pl/MojePrzepisy/EN/wyslijZdjecie.php</string>
    <string name="url_usun_zdjecie">"http://softpartner.pl/MojePrzepisy/EN/usun_zdjecie.php"</string>
    <string name="url_zmien_tytul">http://softpartner.pl/MojePrzepisy/EN/zmien_tytul.php</string>
    <string name="url_pobierz_opis">http://softpartner.pl/MojePrzepisy/EN/pobierz_opis.php</string>
    <string name="url_pobierz_ocene">http://softpartner.pl/MojePrzepisy/EN/pobierz_ocene_uzytkownika.php</string>
    <string name="url_wyslij_ocene">http://softpartner.pl/MojePrzepisy/EN/wyslij_ocene.php</string>
    <string name="url_pobierz_skladniki">http://softpartner.pl/MojePrzepisy/EN/pobierz_skladniki.php</string>
    <string name="url_wyswietl_tytulowy_modul">http://softpartner.pl/MojePrzepisy/EN/wyswietl_tytulowy_modul.php</string>
    <string name="url_sprawdz_wersje">http://softpartner.pl/MojePrzepisy/PL/sprawdz_wersje.php</string>
    <string name="dostepne_update">Update is available, do you want download now?</string>
    <string name="zaloguj_sie">Login</string>
    <string name="wybierz_kategorie">Category</string>
    <string name="dodaj_przepis">Add recipe</string>
    <string name="title_activity_lista_przepisy">My Recipes</string>
    <string name="title_activity_rejestracja">Registration</string>
    <string name="losowy_przepis">Random recipe</string>
    <string name="login">Login</string>
    <string name="haslo">Password</string>
    <string name="wyloguj">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ulubione">Favorites</string>
    <string name="moje_przepisy">My Recipes</string>
    <string name="pseudonim_short">Nickname</string>
    <string name="title_activity_ulubione">Favorites</string>
    <string name="wyszukaj_przepis">Find a recipe</string>
    <string name="trwa_logowanie">Logging in, please wait &#8230;</string>
    <string name="dodawanie_uzytkownika">Adding a user &#8230;</string>
    <string name="brak_polaczenia">No connection to the Internet.</string>
    <string name="dodawanie_przepisu">Adding recipe &#8230;</string>
    <string name="edytowanie_przepisu">Editing recipe &#8230;</string>
    <string name="konto_nieaktywne">Account is not active, check the email to activate your account.</string>

</resources>