<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RejestracjaActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="434dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stworz_konto_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/StworzKonto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/stworz_konto_text"
                android:text="@string/TextViewLogin" />

            <EditText
                android:id="@+id/inLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:inputType="text"
                android:maxLength="12" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/inLogin"
                android:text="@string/TextViewPassword" />

            <EditText
                android:id="@+id/inHaslo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/inPseudonim"
                android:text="@string/Mail" />

            <EditText
                android:id="@+id/inMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inPseudonim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:inputType="text"
                android:maxLength="20" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/inHaslo"
                android:text="@string/powtorzHaslo" />

            <EditText
                android:id="@+id/inHaslo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/inHaslo2"
                android:text="@string/pseudonim" />

            <Button
                android:id="@+id/stworz"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/inMail"
                android:background="@drawable/shadow_effect"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/StworzButton" />

            <TextView
                android:id="@+id/zgodnoscHasel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/inHaslo2"
                android:layout_toRightOf="@+id/inHaslo2"
                android:text="@string/zgodnoscHasel" />

            <Button
                android:id="@+id/wyczysc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/stworz"
                android:layout_toRightOf="@+id/textView6"
                android:background="@drawable/shadow_effect"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/wyczysc" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>