<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis" />

    <RelativeLayout
        android:id="@+id/opis_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:background="@drawable/shadow_effect" >

        <RelativeLayout
            android:id="@+id/krok_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tab_unselected"
            android:paddingLeft="5dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/krok"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:ems="10"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText1"
                android:layout_toRightOf="@+id/editText1"
                android:src="@android:drawable/ic_menu_save"
                android:visibility="gone" />

        </RelativeLayout>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/krok_tittle"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minHeight="80dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/dodaj_opis_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/opis_layout"
        android:text="@string/nastepny_krok" />

</RelativeLayout>
